webcompat/static/css/development/components/comment.css
/** @define Comment */

:root {
  --Comment-fontSize: var(--base-fontSize);
  --Comment-color: var(--base-variantColorLight);
  --Comment-widthAvatar: 59px;
  --Comment-heightAvatar: 56px;
}

/* Main Class */
.wc-Comment {
  font-size: var(--Comment-fontSize);
  display: flex;
  flex-direction: row;
}

  /* space */
  .wc-Comment + .wc-Comment {
    margin-top: 1em;
  }

  /* Avatar */
  .wc-Comment-avatar {
    width: var(--Comment-widthAvatar);
    height: var(--Comment-heightAvatar);
  }

    /* img */
    .wc-Comment-avatar img {
      width: 100%;
    }

  @media all and (max-width: 61.87em) {

    .wc-Comment-avatar {
      display: none;
    }
  }

  /* Body */
  .wc-Comment-body {
    position: relative;
    flex: 1;
    margin-left:.8em;
    max-width: calc(100% - 59px);
  }

  @media all and (max-width: 61.87em) {

    .wc-Comment-body {
      margin-left:0;
    }
  }

    /* Body Caret */
    .wc-Comment-body--caret:after {
      position: absolute;
      content: "";
      width: 18px;
      height: 18px;
      top: 15px;
      left: -9px;
      background-color: #f0f0f0;
      border-color: var(--Comment-color);
      border-style: solid;
      border-width: 0px 0px 1px 1px;
      transform: rotate(45deg);
    }

    /* Form submit */
    .wc-Comment--form .wc-Comment-body--caret:after {
       background-color: #fff;
    }

  /* Wrapper Comment-header Comment-content */
  .wc-Comment-wrapper {
    position: relative;
    width: 100%;
    min-height: 128px;
    border: solid 1px var(--Comment-color);
    border-radius: 10px;
    padding: 0 0 2em;
    word-wrap: break-word;
    background : #fff;
  }

  /* Textarea Placeholder style */
  .wc-Comment-wrapper::placeholder {
    color: var(--Comment-color);
    opacity: 1;
    font-size: 1.2em;
    font-weight: 500;
  }

    .wc-Comment--form  .wc-Comment-wrapper {
      padding-top: 1em;
      margin-bottom: 1.5em;
    }


  /* Comment Header */
  .wc-Comment-header {
    border-radius: 10px 10px 0 0;
    background-color: #f0f0f0;
    padding: .8em 0 .8em 1em;
  }

  /* Name of owner */
  .wc-Comment-owner {
    font-weight: bold;
  }

  /* Comment text */
  .wc-Comment-content {
    position: relative;
    word-wrap: break-word;
    padding:.5em 1em 0;
    /*overflow-x: auto;
    overflow-y: hidden;*/
  }

    /*
     *overide all style from Github Text
     */

     .wc-Comment-content .is-hidden {
       display: none;
     }

     /* force font-size */
     .wc-Comment-content * {
       font-size:1em !important;
     }

     .wc-Issue-details a {
       color: var(--Issue-detailLink);
       text-decoration: underline;
     }

       /* event */
       .wc-Comment-content a:hover,
       .wc-Comment-content a:focus {
         color: var(--Issue-detailLinkHover);
         text-decoration: none;
       }

     .wc-Comment-content strong {
         font-weight: bold !important;
     }

     .wc-Comment-content img {
         max-width: 100%;
         max-height: 100%;
     }

     .wc-Comment-content code {
       font-family: monospace;
       font-size: 90%;
     }

     .wc-Comment-content p > code {
       color: inherit;
       background-color: #F5F5F5;
       padding: 0.25em;
     }

     .wc-Issue-details li {
       margin-bottom: 1em;
     }

     .wc-Issue-details p {
       margin-bottom: 1em;
     }

    /* list style */
    .wc-Comment-content ul,
    .wc-Comment-content ol {
      list-style: inside;
    }

    /* ol */
    .wc-Comment-content ol {
      list-style-type: decimal;
    }

    /* pre / code */
    .wc-Comment-content pre,
    .wc-Comment-content code {
      padding: 1em;
      margin: 0.5em 0px;
      overflow: auto;
      background: #F5F2F0;
    }

    /* code */
    .wc-Comment-content code {
      padding: 0;
    }

    .wc-Comment-content p > code {
      white-space: normal;
    }

    /* title */
    .wc-Comment-content h1 {
      font-size: 2em;
      font-weight: 600;
      margin: 1em 0;
    }

    .wc-Comment-content h2 {
      font-size: 1.5em;
      font-weight: 600;
      margin: 1em 0;
    }

    .wc-Comment-content h3 {
      font-size: 1.2em;
      font-weight: 600;
      margin: 1em 0;
    }

    /* Comment-content img */
    .wc-Comment-content img {
      display: block;
      max-width: 100%;
      max-height: 100%;
    }

    .wc-Comment-content p {
      overflow: hidden;
    }

    /* paragraph */
    .wc-Comment-content p + p {
      font-size: 1em;
      margin-top: 2em;
    }

    /* blockquote */
    .wc-Comment-content blockquote {
      border-left: 4px solid var(--base-colorDark);
      padding: 0px 1em;
      margin: 1em 0px;
      color: #6a6a6a;
    }

    /* GitHub username */
    .wc-Comment-content .github__username {
      font-weight: bold;
    }

  /* img attach file */
  .wc-Comment-attach {
    display: block;
    margin:.8em 0 0 0;
    padding: .4em;
    text-align: center;
    overflow: hidden /* prevent overflow */
  }

  /* prevent width of img */
  .wc-Comment-attach img {
    width: 100%;
    max-width: 100%;
  }

  /* Button */
  .wc-Comment-button {
    text-align: right;
    margin:1.2em 0 0;
  }

  @media all and (max-width: 48.12em) {

   .wc-Comment-button {
     text-align: center;
     font-size:.9em;
    }
  }

  .wc-Comment-button .button {
    text-align: center;
  }

  /* QR */
  .wc-Comment-qr {
    position:absolute;
    z-index: 1;
    right: 0;
  }

